fix landscape display on mobile

--- a/css/agency.css
+++ b/css/agency.css
@@ -308,6 +308,7 @@ header .intro-text .intro-heading {
 
 
 /* add larger font-size when viewed in landscape */
+
 @media screen and (orientation: landscape){
 
     header {
@@ -324,7 +325,7 @@ header .intro-text .intro-heading {
         height: 100vh;
     }
     header .intro-text {
-        padding-top: 300px;
+        padding-top: 100px;
         padding-bottom: 50px;
         color: #fff;
     }
@@ -340,9 +341,9 @@ header .intro-text .intro-heading {
     }
 }
 
-@media(min-width:768px) {
+@media(min-width:768px){
     header .intro-text {
-        padding-top: 300px;
+        padding-top: 150px;
         padding-bottom: 200px;
     }
 
@@ -358,9 +359,9 @@ header .intro-text .intro-heading {
         margin-bottom: 50px;
         text-transform: uppercase;
         font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-        font-size: 117px;
+        font-size: 84px;
         font-weight: 700;
-        line-height: 80px;
+        line-height: 60px;
         opacity: 1;
     }
 }
